$Id: CHANGES,v 1.111 2001/04/11 13:42:52 stelian Exp $

Changes between versions 0.4b21 and 0.4b22 (released ????????????????)
======================================================================

1.	Made dump report the number of blocks dumped per volume.
	Thanks to Kenneth Porter <shiva@well.com> for the suggestion.

2.	Fix a bug in dump where waiting too much at the 'change volumes'
	question caused the volume to be rewritten. Thanks to
	Graham Reed <greed@users.sourceforge.net> for reporting the
	bug and providing a patch.

3.	Added a compression option to dump, contributed by Jerry
	Peters <gapeters@worldnet.att.net>.

	WARNING: the compression works only on files/pipes and 
	drives supporting variable block size.

	WARNING2: tapes created using the compression feature are
	incompatible with the standard dump tape format, and a
	version of restore >= 0.4b22 will be needed for extraction.

4.	Fixed some compilation problems for glibc 2.2.2 and 64 bit 
	architectures. Thanks to Paul Slootman <paul@debian.org> for
	the patch and to Bdale Garbee <bdale@gag.com> for forwarding
	it upstream.

5.	Many cleanups (CPP defines, const char warnings, check of
	ext2fs COMPAT flags, time_t cleanups, added libext2 version
	in dump usage text) by Andreas Dilger <adilger@turbolinux.com>.

6.	Made --prefix option work in configure. All the install path
	are now based on the configure parameters.

7.	Added the Quick File Access mode in dump/restore, contributed
	by Uwe Gohlke <uwe@ugsoft.de>. In this mode, dump stores in
	a file tape position for each inode, and this file is used by 
	restore (if called with parameter Q and the filename)
	to directly position the tape at the file restore is currently 
	working on.  This saves hours when restoring single files from
	large backups, saves the tapes and the drive's head. Use
	--enable-qfa option of configure to compile in the QFA support.

8.	Added the possibility to dump several files and directories