@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.111 2001/04/11 13:42:52 stelian Exp $
+$Id: CHANGES,v 1.112 2001/04/12 13:14:14 stelian Exp $
 
 Changes between versions 0.4b21 and 0.4b22 (released ????????????????)
 ======================================================================
@@ -49,6 +49,10 @@ Changes between versions 0.4b21 and 0.4b22 (released ????????????????)
 9.	Fixed the dumping and restoring of files with holes
 	(files ending with holes didn't get dumped or restored 
 	correctly).
+
+10.	Fixed a socket descriptor leak in dump, which leaved opened
+	3 file descriptors per dump process (and there is one dump
+	process per tape).
 
 Changes between versions 0.4b20 and 0.4b21 (released January 13, 2001)
 ======================================================================
